--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -52,6 +52,6 @@ a {
 .text-green {
     color: green !important;
 }
-.text-warning {
-    color: yellow !important;
+.text-blue {
+    color: blue !important;
 }
